--- a/all.yaml
+++ b/all.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: kc-license-server
+  name: debug-test
 spec:
   ports:
     - port: 8080
@@ -13,7 +13,7 @@ spec:
       protocol: TCP
       targetPort: 2345
   selector:
-    app: kc-license-server
+    app: debug-test
   sessionAffinity: None
   type: ClusterIP
 
@@ -23,7 +23,7 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: kc-license-server
+  name: debug-test
 spec:
   minReadySeconds: 25
   progressDeadlineSeconds: 600
@@ -31,7 +31,7 @@ spec:
   revisionHistoryLimit: 10
   selector:
     matchLabels:
-      app: kc-license-server
+      app: debug-test
   strategy:
     rollingUpdate:
       maxSurge: 0
@@ -40,7 +40,7 @@ spec:
   template:
     metadata:
       labels:
-        app: kc-license-server
+        app: debug-test
     spec:
       containers:
         - image: docker.io/shabrul2451/debuging-go:v0.1
